default converter tests